onglets et pages

--- a/civic.html
+++ b/civic.html
@@ -29,7 +29,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Welcom to my Portfolio ⚡"></span>
+      <span id="typedText" data-text="Civic Engagement ⚡"></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -50,6 +50,21 @@
       <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
+
+  <section class="section-odd">
+    <p class="default-text scroll-appear">Section 1</p>
+    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  </section>
+
+  <section class="section-even">
+    <p class="default-text scroll-appear">Section 2</p>
+    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  </section>
+
+  <section class="section-odd">
+    <p class="default-text scroll-appear">Section 3</p>
+    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  </section>
 
   <footer>
     <p>© 2025 - Portfolio Cyber</p>
