--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Welcom to my Portfolio ⚡"></span>
+      <span id="typedText" data-text="COntact ⚡"></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -50,6 +50,17 @@
       <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
+  <section class="section-odd" id="contact">
+      <h2 class="scroll-appear">Contact</h2>
+  
+    <form class="contact-form scroll-appear" action="#" method="post">
+      <input type="text" name="name" placeholder="Nom et Prénom" required>
+      <input type="text" name="subject" placeholder="Objet" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
+      <button type="submit">Envoyer</button>
+    </form>
+  </section>
 
   <footer>
     <p>© 2025 - Portfolio Cyber</p>
