--- a/career.html
+++ b/career.html
@@ -29,11 +29,10 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Welcom to my Portfolio ⚡"></span>
+      <span id="typedText" data-text="Career Development ⚡"></span>
       <span class="cursor"></span>
     </h1>
   </header>
-
 
   <section id="presentation">
     <p class="default-text scroll-appear">
@@ -50,6 +49,21 @@
       <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
+
+  <section class="section-odd">
+    <p class="default-text scroll-appear">Section 1</p>
+    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  </section>
+
+  <section class="section-even">
+    <p class="default-text scroll-appear">Section 2</p>
+    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  </section>
+
+  <section class="section-odd">
+    <p class="default-text scroll-appear">Section 3</p>
+    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  </section>
 
   <footer>
     <p>© 2025 - Portfolio Cyber</p>
