--- a/index.html
+++ b/index.html
@@ -11,25 +11,16 @@
 
   <!-- Google Fonts (police style informatique/cyber) -->
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 
 <body>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="courses.html">Engineering Courses</a></li>
-      <li><a href="mobility.html">Mobility</a></li>
-      <li><a href="civic.html">Civic Engagement</a></li>
-      <li><a href="activities.html">Sports & Activities</a></li>
-      <li><a href="career.html">Career Development</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <div id="navbar-placeholder"></div>
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Welcom to my Portfolio ⚡"></span>
+      <span id="typedText" data-text="Welcome to my Portfolio ⚡"></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -42,18 +33,67 @@
     </p>
 
     <div class="socials">
-      <a href="#" class="icon">🐦 Twitter</a>
-      <a href="#" class="icon">💻 GitHub</a>
-      <a href="#" class="icon">📷 Instagram</a>
+      <a href="https://github.com/Ravemi987" target="_blank" class="icon">
+        <i class="fa-brands fa-github"></i> Github
+      </a>
+      <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
+        <i class="fa-brands fa-linkedin"></i> Linkedin
+      </a>
+      <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
     </div>
 
       <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
+  <section class="section-odd">
+    <p class="default-text scroll-appear"> Formation</p>
+    <div id="formationContent">
+      <span class="timeline"></span>
+      <div class="default-text scroll-appear formation-div">
+        <h2>Test</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>Master Informatique</p>
+          <p>Université de Toulouse</p>
+        </div>
+        <p class="formation-date">2022-2024</p>
+      </div>
 
-  <footer>
-    <p>© 2025 - Portfolio Cyber</p>
-  </footer>
+      <div class="default-text scroll-appear formation-div">
+        <h2>Test</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>Master Informatique</p>
+          <p>Université de Toulouse</p>
+        </div>
+        <p class="formation-date">2022-2024</p>
+      </div>
+
+      <div class="default-text scroll-appear formation-div">
+        <h2>Test</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>Master Informatique</p>
+          <p>Université de Toulouse</p>
+        </div>
+        <p class="formation-date">2022-2024</p>
+      </div>
+
+            <div class="default-text scroll-appear formation-div">
+        <h2>Test</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>Master Informatique</p>
+          <p>Université de Toulouse</p>
+        </div>
+        <p class="formation-date">2022-2024</p>
+      </div>
+    </div>
+  </section>
+
+  <div id="footer-placeholder"></div>
 
   <!-- Lien JS -->
   <script src="script.js"></script>
