--- a/mobility.html
+++ b/mobility.html
@@ -15,17 +15,7 @@
 
 <body>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="courses.html">Engineering Courses</a></li>
-      <li><a href="mobility.html">Mobility</a></li>
-      <li><a href="civic.html">Civic Engagement</a></li>
-      <li><a href="activities.html">Sports & Activities</a></li>
-      <li><a href="career.html">Career Development</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <div id="navbar-placeholder"></div>
 
   <header>
     <h1 class="glitch">
@@ -66,10 +56,7 @@
     <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
-
-  <footer>
-    <p>© 2025 - Portfolio Cyber</p>
-  </footer>
+  <div id="footer-placeholder"></div>
 
   <!-- Lien JS -->
   <script src="script.js"></script>
