--- a/courses.html
+++ b/courses.html
@@ -19,16 +19,17 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Engineering Courses ⚡"></span>
+      <span id="typedText" data-text="Courses ⚡"></span>
       <span class="cursor"></span>
     </h1>
   </header>
 
 
   <section id="presentation">
-    <p class="default-text scroll-appear">
-      Je suis Rémi, passionné par le développement web et les univers cyberpunk.  
-      Explorez mes réseaux ci-dessous 👇
+    <p class="default-text scroll-appear"> 
+      In this section, I quickly present the followed courses
+      during both my Bachelor's degree and my engineering cursus at ENSEEIHT.
+      Below, you will find a brief description for each one of my most interesting perosonnal and academic projects!
     </p>
 
     <div class="socials">
@@ -36,8 +37,6 @@
       <a href="#" class="icon">💻 GitHub</a>
       <a href="#" class="icon">📷 Instagram</a>
     </div>
-
-      <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
 
