--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 
   <section id="presentation">
     <p class="default-text scroll-appear">
-      Je suis Rémi, passionné par le développement web et les univers cyberpunk.  
-      Explorez mes réseaux ci-dessous 👇
+      Hello! My name is Rémi. I am currently a student at ENSEEIHT engineering school, located in Toulouse, France.
+      There, I study computer science and more specifically computer architecture, systems and networks.
+      I am mostly interested in Artificial Intelligence, Cybersecurity and Embedded Systems. Besides, I love
+      turning my knowledge into concrete applications through both academic and personal projects.
+      Finally, I am really looking forward to gain professional experience through internships.
     </p>
 
     <div class="socials">
@@ -43,55 +46,62 @@
         <i class="fa-brands fa-discord"></i> Discord
       </a>
     </div>
-
-      <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
   <section class="section-odd">
-    <p class="default-text scroll-appear"> Formation</p>
-    <div id="formationContent">
-      <span class="timeline"></span>
-      <div class="default-text scroll-appear formation-div">
-        <h2>Test</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>Master Informatique</p>
-          <p>Université de Toulouse</p>
-        </div>
-        <p class="formation-date">2022-2024</p>
-      </div>
+    <h1 class="scroll-appear"> Formation</h1>
 
-      <div class="default-text scroll-appear formation-div">
-        <h2>Test</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>Master Informatique</p>
-          <p>Université de Toulouse</p>
-        </div>
-        <p class="formation-date">2022-2024</p>
-      </div>
+    <p class="default-text scroll-appear">
+      Before my engineering curriculum, I completed a Bachelor degree in Computer Science at the Université de Toulouse.
+      Consequently you will find below a quick history of my academic journey.
+    </p>
 
-      <div class="default-text scroll-appear formation-div">
-        <h2>Test</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>Master Informatique</p>
-          <p>Université de Toulouse</p>
-        </div>
-        <p class="formation-date">2022-2024</p>
+  <div id="formationContent">
+    <span class="timeline"></span>
+    
+    <div class="default-text scroll-appear formation-div">
+      <h2>Engineering Degree</h2>
+      <span class="formation-spacer"></span>
+      <div class="formation-text">
+        <p>Specialized in Architecture, Systems and Networks</p>
+        <p>ENSEEIHT - Toulouse, France</p>
       </div>
-
-            <div class="default-text scroll-appear formation-div">
-        <h2>Test</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>Master Informatique</p>
-          <p>Université de Toulouse</p>
-        </div>
-        <p class="formation-date">2022-2024</p>
-      </div>
+      <p class="formation-date">2025-2027</p>
     </div>
-  </section>
+
+    <div class="default-text scroll-appear formation-div">
+      <h2>Bachelor's Degree in Computer Science - Fundamental Track</h2>
+      <span class="formation-spacer"></span>
+      <div class="formation-text">
+        <p>University Degree in Computer Science (3 years of higher education)</p>
+        <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+      </div>
+      <p class="formation-date">2024-2025</p>
+    </div>
+
+    <div class="default-text scroll-appear formation-div">
+      <h2>Bachelor's Degree in Computer Science</h2>
+      <span class="formation-spacer"></span>
+      <div class="formation-text">
+        <p>University Degree in Computer Science (2 years of higher education)</p>
+        <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+      </div>
+      <p class="formation-date">2022-2024</p>
+    </div>
+
+    <div class="default-text scroll-appear formation-div">
+      <h2>General Baccalauréat</h2>
+      <span class="formation-spacer"></span>
+      <div class="formation-text">
+        <p>Scientific Diploma - High Honors</p>
+        <p>Majors: Mathematics, Physics-Chemistry, Computer Science</p>
+        <p>Options: Advanced Mathematics, Latin</p>
+        <p>Lycée Stéphane Hessel - Toulouse, France</p>
+      </div>
+      <p class="formation-date">2019-2022</p>
+    </div>
+  </div>
+</section>
 
   <div id="footer-placeholder"></div>
 
