--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
             <span class="name">Rémi Airiau</span> | <span class="title">Engineer at ENSEEIHT</span></a>
         </li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="courses.html">Engineering Courses</a></li>
+        <li><a href="courses.html">Courses</a></li>
         <li><a href="mobility.html">Mobility</a></li>
         <li><a href="civic.html">Civic Engagement</a></li>
         <li><a href="activities.html">Sports & Activities</a></li>
