--- a/career.html
+++ b/career.html
@@ -11,6 +11,7 @@
 
   <!-- Google Fonts (police style informatique/cyber) -->
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 
 <body>
@@ -26,9 +27,15 @@
 
   <section id="presentation">
     <div class="socials">
-      <a href="#" class="icon">🐦 Twitter</a>
-      <a href="#" class="icon">💻 GitHub</a>
-      <a href="#" class="icon">📷 Instagram</a>
+      <a href="https://github.com/Ravemi987" target="_blank" class="icon">
+        <i class="fa-brands fa-github"></i> Github
+      </a>
+      <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
+        <i class="fa-brands fa-linkedin"></i> Linkedin
+      </a>
+      <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
     </div>
   </section>
 
