--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 
   <!-- Google Fonts (police style informatique/cyber) -->
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 
 <body>
@@ -27,22 +28,28 @@
 
   <section id="presentation">
     <div class="socials">
-      <a href="#" class="icon">🐦 Twitter</a>
-      <a href="#" class="icon">💻 GitHub</a>
-      <a href="#" class="icon">📷 Instagram</a>
+      <a href="https://github.com/Ravemi987" target="_blank" class="icon">
+        <i class="fa-brands fa-github"></i> Github
+      </a>
+      <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
+        <i class="fa-brands fa-linkedin"></i> Linkedin
+      </a>
+      <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
     </div>
   </section>
   
 
   <section class="section-odd" id="contact">
-      <h2 class="scroll-appear">Contact</h2>
+    <h2 class="scroll-appear">Contact</h2>
   
     <form class="contact-form scroll-appear" action="#" method="post">
-      <input type="text" name="name" placeholder="Nom et Prénom" required>
-      <input type="text" name="subject" placeholder="Objet" required>
+      <input type="text" name="name" placeholder="Name" required>
+      <input type="text" name="subject" placeholder="Subject" required>
       <input type="email" name="email" placeholder="Email" required>
-      <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
-      <button type="submit">Envoyer</button>
+      <textarea name="message" placeholder="Your message"required></textarea>
+      <button type="submit">Send</button>
     </form>
   </section>
 
