--- a/courses.html
+++ b/courses.html
@@ -11,6 +11,7 @@
 
   <!-- Google Fonts (police style informatique/cyber) -->
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 
 <body>
@@ -33,26 +34,92 @@
     </p>
 
     <div class="socials">
-      <a href="#" class="icon">🐦 Twitter</a>
-      <a href="#" class="icon">💻 GitHub</a>
-      <a href="#" class="icon">📷 Instagram</a>
+      <a href="https://github.com/Ravemi987" target="_blank" class="icon">
+        <i class="fa-brands fa-github"></i> Github
+      </a>
+      <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
+        <i class="fa-brands fa-linkedin"></i> Linkedin
+      </a>
+      <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
     </div>
   </section>
 
 
   <section class="section-odd">
-    <p class="default-text scroll-appear">Section 1</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+    <h2 class="scroll-appear">Bachelor's Degree courses content</h2>
+
+    <div class="course-list green-list scroll-appear">
+      <h3>Software Development Methodology / Software Engineering</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Verification, complexity analysis, security</li>
+        <li><span class="chevron">&gt;</span> Data structures, abstract types</li>
+        <li><span class="chevron">&gt;</span> Object-oriented programming, validation, testing</li>
+      </ul>
+
+      <h3>Computer Architecture and Environment</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Machine architecture</li>
+        <li><span class="chevron">&gt;</span> Computer networks</li>
+        <li><span class="chevron">&gt;</span> Operating systems</li>
+      </ul>
+
+      <h3>Programming Languages</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Python, C, Java, OCamL, SQL, Assembly ARMv7, R, JavaScript</li>
+      </ul>
+
+      <h3>Discrete Structures and Algorithms</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Algorithms, logic, information theory, language theory, graph theory and algorithms, cryptography, 
+          probability/statistics, arithmetic, linear algebra, numerical methods</li>
+      </ul>
+
+      <h3>Other</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Databases, Human-Computer Interaction, Artificial Intelligence, Computer Graphics, Parallel Programming</li>
+        <li><span class="chevron">&gt;</span> Project Management Techniques and Collaborative Tools</li>
+      </ul>
+    </div>
+
+    <span class="source-link scroll-appear">
+      <a href="https://www.univ-tlse3.fr/decouvrir-nos-diplomes/licence-parcours-informatique-info#presentation" target="_blank">
+        Source: Université de Toulouse - Bachelor's Degree in Computer Science
+      </a>
+    </span>
   </section>
 
   <section class="section-even">
-    <p class="default-text scroll-appear">Section 2</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
-  </section>
+    <h2 class="scroll-appear">Engineering Degree courses</h2>
 
-  <section class="section-odd">
-    <p class="default-text scroll-appear">Section 3</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+    <div class="course-list blue-list scroll-appear">
+      <h3>Architecture, Systems and Networks - Semester 7</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Functional Programming and Language Translation</li>
+        <li><span class="chevron">&gt;</span> Computer Architecture</li>
+        <li><span class="chevron">&gt;</span> Local and Telecommunications Networks</li>
+                <li><span class="chevron">&gt;</span> Internet and Graph Theory</li>
+        <li><span class="chevron">&gt;</span> Concurrent and Communicating Systems</li>
+        <li><span class="chevron">&gt;</span> Soft and Human Skills</li>
+      </ul>
+
+      <h3>Architecture, Systems and Networks - Semester 8</h3>
+      <ul>
+        <li><span class="chevron">&gt;</span> Concurrent and Communicating Applications, Databases</li>
+        <li><span class="chevron">&gt;</span> Network Science and Learning</li>
+        <li><span class="chevron">&gt;</span> Network Interconnections and Modeling</li>
+        <li><span class="chevron">&gt;</span> Wireless and Mobile Telecommunications Systems</li>
+        <li><span class="chevron">&gt;</span> Operating Systems Architecture</li>
+        <li><span class="chevron">&gt;</span> Soft and Human Skills</li>
+      </ul>
+    </div>
+
+    <span class="source-link scroll-appear">
+      <a href="https://www.enseeiht.fr/fr/formation/formation-ingenieur/departement-sn/programme-sn/programme-2a-sn.html" target="_blank">
+        Source: ENSEEIHT - Engineering Degree in Computer Science and Telecommunications
+      </a>
+    </span>
   </section>
 
 
