--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   </section>
   
 
-  <section class="section-odd" id="contact">
+  <section class="section-odd first-section" id="contact">
     <h2 class="scroll-appear">Contact</h2>
   
     <form class="contact-form scroll-appear" action="#" method="post">
