--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
   </section>
 
-  <section class="section-odd">
+  <section class="section-odd first-section">
     <h1 class="scroll-appear"> Formation</h1>
 
     <p class="default-text scroll-appear">
@@ -56,52 +56,52 @@
       Consequently you will find below a quick history of my academic journey.
     </p>
 
-  <div id="formationContent">
-    <span class="timeline"></span>
-    
-    <div class="default-text scroll-appear formation-div">
-      <h2>Engineering Degree</h2>
-      <span class="formation-spacer"></span>
-      <div class="formation-text">
-        <p>Specialized in Architecture, Systems and Networks</p>
-        <p>ENSEEIHT - Toulouse, France</p>
+    <div id="formationContent">
+      <span class="timeline"></span>
+      
+      <div class="default-text scroll-appear formation-div">
+        <h2>Engineering Degree</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>Specialized in Architecture, Systems and Networks</p>
+          <p>ENSEEIHT - Toulouse, France</p>
+        </div>
+        <p class="formation-date">2025-2027</p>
       </div>
-      <p class="formation-date">2025-2027</p>
-    </div>
 
-    <div class="default-text scroll-appear formation-div">
-      <h2>Bachelor's Degree in Computer Science - Fundamental Track</h2>
-      <span class="formation-spacer"></span>
-      <div class="formation-text">
-        <p>University Degree in Computer Science (3 years of higher education)</p>
-        <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+      <div class="default-text scroll-appear formation-div">
+        <h2>Bachelor's Degree in Computer Science - Fundamental Track</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>University Degree in Computer Science (3 years of higher education)</p>
+          <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+        </div>
+        <p class="formation-date">2024-2025</p>
       </div>
-      <p class="formation-date">2024-2025</p>
-    </div>
 
-    <div class="default-text scroll-appear formation-div">
-      <h2>Bachelor's Degree in Computer Science</h2>
-      <span class="formation-spacer"></span>
-      <div class="formation-text">
-        <p>University Degree in Computer Science (2 years of higher education)</p>
-        <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+      <div class="default-text scroll-appear formation-div">
+        <h2>Bachelor's Degree in Computer Science</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>University Degree in Computer Science (2 years of higher education)</p>
+          <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+        </div>
+        <p class="formation-date">2022-2024</p>
       </div>
-      <p class="formation-date">2022-2024</p>
-    </div>
 
-    <div class="default-text scroll-appear formation-div">
-      <h2>General Baccalauréat</h2>
-      <span class="formation-spacer"></span>
-      <div class="formation-text">
-        <p>Scientific Diploma - High Honors</p>
-        <p>Majors: Mathematics, Physics-Chemistry, Computer Science</p>
-        <p>Options: Advanced Mathematics, Latin</p>
-        <p>Lycée Stéphane Hessel - Toulouse, France</p>
+      <div class="default-text scroll-appear formation-div">
+        <h2>General Baccalauréat</h2>
+        <span class="formation-spacer"></span>
+        <div class="formation-text">
+          <p>Scientific Diploma - High Honors</p>
+          <p>Majors: Mathematics, Physics-Chemistry, Computer Science</p>
+          <p>Options: Advanced Mathematics, Latin</p>
+          <p>Lycée Stéphane Hessel - Toulouse, France</p>
+        </div>
+        <p class="formation-date">2019-2022</p>
       </div>
-      <p class="formation-date">2019-2022</p>
     </div>
-  </div>
-</section>
+  </section>
 
   <div id="footer-placeholder"></div>
 
