--- a/mobility.html
+++ b/mobility.html
@@ -41,7 +41,7 @@
   </section>
 
 
-  <section class="section-odd">
+  <section class="section-odd first-section">
     <p class="default-text scroll-appear">Section 1</p>
     <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
