courses and civic engagement

--- a/courses.html
+++ b/courses.html
@@ -30,7 +30,7 @@
     <p class="default-text scroll-appear"> 
       In this section, I quickly present the followed courses
       during both my Bachelor's degree and my engineering cursus at ENSEEIHT.
-      Below, you will find a brief description for each one of my most interesting perosonnal and academic projects!
+      Below, you will find a brief description for each one of my most interesting personnal and academic projects!
     </p>
 
     <div class="socials">
@@ -211,7 +211,7 @@
           <div class="flashcard-text">
             <p>Conception of a fonctional processor for ARMv7 (32 bits)</p>
             <p>Wiring in Logisim. Implementation of every component and mecanism from scratch:</p>
-            <p>UAL - Register file - Instrcution Decoder and management of NZCV flags, memory, program counter.</p>
+            <p>UAL - Register file - Instruction Decoder and management of NZCV flags, memory, program counter.</p>
             <p>Correct execution of basic instructions (MOV, ADD, SUB, LOAD, STORE, ...)</p>
             <p>I am currently developing back this processor in VHDL for embedded systems (FPGA)</p>
           </div>
