--- a/activities.html
+++ b/activities.html
@@ -40,21 +40,33 @@
     </div>
   </section>
 
-
-  <section class="section-odd first-section">
-    <p class="default-text scroll-appear">Section 1</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  <section class="section-odd activities-section" id="trumpet">
+    <h1 class="scroll-appear"> Trumpet </h1>
   </section>
 
-  <section class="section-even">
-    <p class="default-text scroll-appear">Section 2</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  <section class="section-odd activities-section" id="drums">
+    <h1 class="scroll-appear"> Drums </h1>
   </section>
 
-  <section class="section-odd">
-    <p class="default-text scroll-appear">Section 3</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+  <section class="section-even activities-section" id="piano">
+    <h1 class="scroll-appear"> Piano </h1>
   </section>
+
+  <section class="section-odd activities-section" id="football">
+    <h1 class="scroll-appear"> Football </h1>
+  </section>
+
+  <section class="section-odd  activities-section" id="table-tennis">
+    <h1 class="scroll-appear"> Table Tennis </h1>
+  </section>
+
+  <!-- <section class="section-even  activities-section" id="programming">
+    <h1 class="scroll-appear"> Programming </h1>
+  </section>
+
+  <section class="section-odd activities-section" id="video-games">
+    <h1 class="scroll-appear"> Video Games </h1>
+  </section> -->
 
 
   <div id="footer-placeholder"></div>
