--- a/activities.html
+++ b/activities.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Sports & Activities ⚡"></span>
+      <span id="typedText" data-text="Sports & Activities "></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -40,33 +40,25 @@
     </div>
   </section>
 
-  <section class="section-odd activities-section" id="trumpet">
+  <section class="activities-section" id="trumpet">
     <h1 class="scroll-appear"> Trumpet </h1>
   </section>
 
-  <section class="section-odd activities-section" id="drums">
+  <section class="activities-section" id="drums">
     <h1 class="scroll-appear"> Drums </h1>
   </section>
 
-  <section class="section-even activities-section" id="piano">
+  <section class="activities-section" id="piano">
     <h1 class="scroll-appear"> Piano </h1>
   </section>
 
-  <section class="section-odd activities-section" id="football">
+  <section class="activities-section" id="football">
     <h1 class="scroll-appear"> Football </h1>
   </section>
 
-  <section class="section-odd  activities-section" id="table-tennis">
+  <section class="activities-section" id="table-tennis">
     <h1 class="scroll-appear"> Table Tennis </h1>
   </section>
-
-  <!-- <section class="section-even  activities-section" id="programming">
-    <h1 class="scroll-appear"> Programming </h1>
-  </section>
-
-  <section class="section-odd activities-section" id="video-games">
-    <h1 class="scroll-appear"> Video Games </h1>
-  </section> -->
 
 
   <div id="footer-placeholder"></div>
