--- a/career.html
+++ b/career.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Career Development ⚡"></span>
+      <span id="typedText" data-text="Career Development "></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -40,17 +40,17 @@
   </section>
 
 
-  <section class="section-odd first-section">
+  <section >
     <p class="default-text scroll-appear">Section 1</p>
     <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
-  <section class="section-even">
+  <section>
     <p class="default-text scroll-appear">Section 2</p>
     <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
 
-  <section class="section-odd">
+  <section>
     <p class="default-text scroll-appear">Section 3</p>
     <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
   </section>
