--- a/civic.html
+++ b/civic.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Civic Engagement ⚡"></span>
+      <span id="typedText" data-text="Civic Engagement "></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -49,7 +49,7 @@
   </section>
 
 
-  <section class="section-odd first-section">
+  <section>
     <h1 class="engagement-title scroll-appear"> Net 7 </h1>
 
     <div class="engagement-block scroll-appear">
@@ -84,7 +84,7 @@
 
   </section>
 
-  <section class="section-even">
+  <section>
     <h1 class="engagement-title scroll-appear"> BattleDev </h1>
 
     <div class="engagement-block reverse scroll-appear short-text">
@@ -102,7 +102,7 @@
     </div>
   </section>
 
-  <section class="section-odd">
+  <section>
     <h1 class="engagement-title scroll-appear"> Other </h1>
 
     <div class="engagement-block scroll-appear short-text">
