--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Contact Me ⚡"></span>
+      <span id="typedText" data-text="Contact Me "></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -41,7 +41,7 @@
   </section>
   
 
-  <section class="section-odd first-section" id="contact">
+  <section  id="contact">
     <h2 class="scroll-appear">Contact</h2>
   
     <form class="contact-form scroll-appear" action="#" method="post">
