--- a/courses.html
+++ b/courses.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Courses ⚡"></span>
+      <span id="typedText" data-text="Courses "></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -47,7 +47,7 @@
   </section>
 
 
-  <section class="section-odd first-section">
+  <section>
     <h2 class="scroll-appear">Bachelor's Degree courses content</h2>
 
     <div class="course-list green-list scroll-appear">
@@ -90,7 +90,7 @@
     </span>
   </section>
 
-  <section class="section-even">
+  <section>
     <h2 class="scroll-appear">Engineering Degree courses</h2>
 
     <div class="course-list blue-list scroll-appear">
@@ -116,7 +116,7 @@
     </div>
   </section>
 
-  <section class="section-odd">
+  <section>
     <h1 class="scroll-appear">Projects</h1>
 
     <div id="projectContent">
