--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1 class="glitch">
-      <span id="typedText" data-text="Welcome to my Portfolio ⚡"></span>
+      <span id="typedText" data-text="Welcome to my Portfolio "></span>
       <span class="cursor"></span>
     </h1>
   </header>
@@ -48,7 +48,7 @@
     </div>
   </section>
 
-  <section class="section-odd first-section">
+  <section >
     <h1 class="scroll-appear"> Formation</h1>
 
     <p class="default-text scroll-appear">
